# Cryptocurrency-Live-Trading-Bot

./: CMakeLists.txt  CODEOWNERS  README.md  testingStrategy
historicData/: 28_11_2021.txt
historicData/2021_11_28/: 18_00.txt  19_00.txt  20_00.txt
historicData/2021_11_29/: 23_00.txt
historicData/2021_11_30/: 00_00.txt  08_00.txt  09_00.txt  10_00.txt  11_00.txt  12_00.txt  13_00.txt  14_00.txt  15_00.txt  16_00.txt  17_00.txt  21_00.txt  22_00.txt
historicData/2021_12_1/: 08_00.txt  09_00.txt  10_00.txt  11_00.txt  13_00.txt  14_00.txt  15_00.txt  16_00.txt  19_00.txt  20_00.txt  21_00.txt  22_00.txt
historicData/2022_3_11/: 22_00.txt
historicData/2022_3_12/: 19_00.txt  21_00.txt
include/: binance.h  crypto_gui.h  crypto_logic.h  fetch_data.h  historic_data.h  message_queue.h  results.h  retrieve_data.h  simulate_data.h  strategy.h
src/: binance.cpp  crypto_gui.cpp  crypto_logic.cpp  fetch_data.cpp  historic_data.cpp  main.cpp  results.cpp  retrieve_data.cpp  simulate_data.cpp  strategy.cpp
